--- a/about.html
+++ b/about.html
@@ -88,8 +88,8 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-rounded-right"></i> <strong>Nama Lengkap:</strong> Ni Putu Nadila Sinthadewi</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Nama Panggilan:</strong> Nadila</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Tangga Lahir:</strong> 26 June 2004</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Nama Panggilan:</strong> Nadila, Dila, Nad</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Tanggal Lahir:</strong> 26 June 2004</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Umur:</strong> 19</li>
                 </ul>
               </div>
@@ -98,6 +98,7 @@
                   <li><i class="bi bi-rounded-right"></i> <strong>Alamat:</strong> Jembrana & Tabanan, Bali</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Email:</strong> putunadila26@gmail.com</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Hobi:</strong> Mendengarkan Musik & Membaca</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Instagram :</strong> @nadilasnthdewi</li>
                 </ul>
               </div>
             </div>
