--- a/about.html
+++ b/about.html
@@ -73,7 +73,9 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Berikut Merupakan Biodata Singkat Mengenai Saya</p>
+          <p class="fst-italic">
+           Berikut Merupakan Biodata Singkat Mengenai Saya
+          </p>
         </div>
 
         <div class="row">
@@ -82,8 +84,6 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>BIODATA SAYA:</h3>
-            <p class="fst-italic">
-            </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -102,9 +102,9 @@
                 </ul>
               </div>
             </div>
-            <p>
-              Halo, Saya Nadila. Saya lahir di Manistutu, Jembrana dan dibesarkan di Tabanan. Saat ini, saya sedang Berkuliah di Universitas Udayana sebagai mahasiswi Fakultas Teknik, Program Studi Teknologi Informasi Angkatan 22.
-              Saya suka menghabiskan waktu luang dengan mendengarkan musik, membaca novel dan menonton drama korea. Senang berkenalan dengan Anda :) !
+            <p class="fst-italic" align="justify">
+              Halo, Saya Nadila. Saya lahir di Manistutu, Jembrana dan dibesarkan di Tabanan. Saat ini, saya sedang berkuliah di Universitas Udayana sebagai mahasiswi Fakultas Teknik, 
+              Program Studi Teknologi Informasi Angkatan 22. Saya suka menghabiskan waktu luang dengan mendengarkan musik, membaca novel dan menonton drama korea. Senang berkenalan dengan Anda :) !
             </p>
           </div>
         </div>
