--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
                   <li><i class="bi bi-rounded-right"></i> <strong>Nama Lengkap:</strong> Ni Putu Nadila Sinthadewi</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Nama Panggilan:</strong> Nadila, Dila, Nad</li>
                   <li><i class="bi bi-rounded-right"></i> <strong>Tanggal Lahir:</strong> 26 June 2004</li>
-                  <li><i class="bi bi-rounded-right"></i> <strong>Umur:</strong> 19</li>
+                  <li><i class="bi bi-rounded-right"></i> <strong>Umur:</strong> 19 Tahun</li>
                 </ul>
               </div>
               <div class="col-lg-6">
