--- a/tugasprognet.html
+++ b/tugasprognet.html
@@ -86,7 +86,7 @@
                 <i class="bx bxl-dribbble"></i>
               </div>
               <h4><a href="tugasjava.html">Tugas JavaScript</a></h4>
-              <p>Berikut Merupakan Tugas Form Biodata</p>
+              <p class="fst-italic">Berikut Merupakan Tugas Form Biodata</p>
             </div>
           </div>
 
