--- a/tugasprognet.html
+++ b/tugasprognet.html
@@ -85,9 +85,9 @@
                 </svg>
                 <i class="bx bxl-dribbble"></i>
               </div>
-              <h4><a href="tugasjava.html">Tugas JavaScript</a></h4>
+              <h4><a href="tugasjava.html">Tugas JavaScript & PHP</a></h4>
               <p class="fst-italic">
-                Berikut Merupakan Tugas Form Biodata
+                Berikut Merupakan Tugas Form Biodata dan Juga Hasil Form PHP.
               </p>
             </div>
           </div>
@@ -100,7 +100,7 @@
                 </svg>
                 <i class="bx bx-file"></i>
               </div>
-              <h4><a href="">Tugas</a></h4>
+              <h4><a href="tugas_dbsql.php">Tugas DB SQL</a></h4>
               <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
             </div>
           </div>
