--- a/tugasprognet.html
+++ b/tugasprognet.html
@@ -101,7 +101,9 @@
                 <i class="bx bx-file"></i>
               </div>
               <h4><a href="tugas_dbsql.php">Tugas DB SQL</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <p class="fst-italic">
+                Berikut Merupakan Tugas Form Biodata yang sudah Terhubung ke Database.
+              </p>
             </div>
           </div>
 
